--- a/WebApplication/packages.config
+++ b/WebApplication/packages.config
@@ -3,6 +3,12 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="AutoMapper" version="6.2.2" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net452" />
+  <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net452" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net452" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.1.4.12333" targetFramework="net452" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net452" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -20,11 +26,16 @@
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.OAuth" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
@@ -32,4 +43,5 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
+  <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net452" />
 </packages>
